# docs/swagger.json
@@ -1,10 +1,24 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "沙河论坛接口文档",
+        "title": "沙河论坛",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "chunkai_wang@qq.com",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "127.0.0.1",
+    "basePath": "/api/v1",
     "paths": {
-        "/posts2": {
+        "/posts": {
             "get": {
                 "security": [
                     {
@@ -21,7 +35,7 @@
                 "tags": [
                     "帖子相关接口"
                 ],
-                "summary": "升级版帖子列表接口",
+                "summary": "帖子列表接口",
                 "parameters": [
                     {
                         "type": "string",
@@ -74,7 +88,9 @@
                 1004,
                 1005,
                 1006,
-                1007
+                1007,
+                1008,
+                1009
             ],
             "x-enum-varnames": [
                 "CodeSuccess",
@@ -84,7 +100,9 @@
                 "CodeInvalidPassword",
                 "CodeServerBusy",
                 "CodeNeedLogin",
-                "CodeInvalidToken"
+                "CodeNotPermission",
+                "CodeInvalidToken",
+                "CodeEmailEmpty"
             ]
         },
         "controllers._ResponsePostList": {
@@ -96,7 +114,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.ApiPostDetail"
+                        "$ref": "#/definitions/response.PostResponse"
                     }
                 },
                 "message": {
@@ -104,22 +122,11 @@
                 }
             }
         },
-        "models.ApiPostDetail": {
+        "response.PostResponse": {
             "type": "object",
-            "required": [
-                "community_id",
-                "content",
-                "title"
-            ],
             "properties": {
                 "author_id": {
                     "type": "integer"
-                },
-                "author_name": {
-                    "type": "string"
-                },
-                "community": {
-                    "$ref": "#/definitions/models.CommunityDetail"
                 },
                 "community_id": {
                     "type": "integer"
@@ -127,37 +134,13 @@
                 "content": {
                     "type": "string"
                 },
-                "create_time": {
-                    "type": "string"
-                },
                 "id": {
-                    "type": "string",
-                    "example": "0"
+                    "type": "integer"
                 },
                 "status": {
                     "type": "integer"
                 },
                 "title": {
-                    "type": "string"
-                },
-                "vote_num": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.CommunityDetail": {
-            "type": "object",
-            "properties": {
-                "create_time": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "introduction": {
-                    "type": "string"
-                },
-                "name": {
                     "type": "string"
                 }
             }
